[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml26-grader"
version = "0.1.0"
description = "Scaffold for the Assignment 1 grader covering Q2, Q3, and Q4."
requires-python = ">=3.11,<3.13"
dependencies = [
    "nbformat>=5.10,<6.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9.0"]

[project.scripts]
ml26-grader = "ml26_grader.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
